This closes out F-RA09 & F-RA11
